assets/styles.css
* {
  padding: 0;
  margin: 0;
}

body {
  background-color: #121212;
  font-family: 'Montserrat', sans-serif;
}

.sidebar {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 135px;
  background-color: #000000;
  padding: 24px;
}

.sidebar .logo img {
  width: 130px;
}

.sidebar .navigation ul {
  list-style: none;
  margin-top: 20px;
}

.sidebar .navigation ul li {
  padding: 10px 0px;
}

.sidebar .navigation ul li a {
  color: #b3b3b3;
  text-decoration: none;
  font-weight: bold;
  font-size: 13px;
}

.sidebar .navigation ul li a:hover,
.sidebar .navigation ul li a:active,
.sidebar .navigation ul li a:focus {
  color: #ffffff;
}

.sidebar .navigation ul li a:hover .fa,
.sidebar .navigation ul li a:active .fa,
.sidebar .navigation ul li a:focus .fa {
  color: #b3b3b3;
}

.sidebar .navigation ul li .fa {
  font-size: 20px;
  margin-right: 10px;
}

.sidebar .navigation ul li a:hover .fa:hover,
.sidebar .navigation ul li a:hover .fa:active,
.sidebar .navigation ul li a:hover .fa:focus {
  color: #ffffff;
}

.sidebar .policies {
  position: absolute;
  bottom: 100px;
}

.sidebar .policies ul {
  list-style: none;
}

.sidebar .policies ul li {
  padding-bottom: 5px;
}

.sidebar .policies ul li a {
  color: #b3b3b3;
  font-weight: 500;
  text-decoration: none;
  font-size: 10px;
}

.sidebar .policies ul li a:hover,
.sidebar .policies ul li a:active,
.sidebar .policies ul li a:focus {
  text-decoration: underline;
}

.main-container {
  margin-left: 175px;
  margin-bottom: 100px;
}

.topbar {
  display: flex;
  justify-content: right;
  background-color: #101010;
  padding: 14px 30px;
}

.topbar .navbar {
  display: flex;
  align-items: center;
}

.topbar .navbar ul {
  list-style: none;
}

.topbar .navbar ul li {
  display: inline-block;
  margin: 0px 15px;
  width: 25px;
}

.topbar .navbar ul li a {
  color: #b3b3b3;
  text-decoration: none;
  font-weight: bold;
  font-size: 14px;
  letter-spacing: 1px;
}

.topbar .navbar ul li a:hover,
.topbar .navbar ul li a:active,
.topbar .navbar ul li a:focus {
  color: #ffffff;
  font-size: 15px;
}

.topbar .navbar ul li.divider {
  color: #ffffff;
  font-size: 26px;
  margin: 0px 5px;
  width: auto;
}

.topbar .navbar button {
  background-color: #1ED760;
  color: #000000;
  font-size: 16px;
  font-weight: bold;
  padding: 8px 8px;
  border: 10px;
  border-radius: 40px;
  cursor: pointer;
  margin-left: 30px;
}

.topbar .navbar button:hover,
.topbar .navbar button:active,
.topbar .navbar button:focus {
  color: #ffffff;
  background-color: #00ff59;
}

.spotify-playlists {
  padding: 20px 40px;
  overflow-x: hidden;
}

.spotify-playlists h2 {
  color: #ffffff;
  font-size: 22px;
  margin-bottom: 20px;
}

.spotify-playlists h3 {
  color: #989898;
  font-size: 16px;
  margin-bottom: 20px;
}

.spotify-playlists .list {
  position: relative;
  overflow:hidden;
  display: inline-block;
  width: 175vh;
  white-space: nowrap;
}

@keyframes slide {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-615%);
  }
}

.spotify-playlists .list .item {
  min-width: 140px;
  width: 160px;
  padding: 15px;
  background-color: #181818;
  border-radius: 6px;
  cursor: pointer;
  transition: all ease 0.4s;

  display: inline-block;
  /* Disabling this because it does not work */
  animation: 10s slide infinite linear;
}

.spotify-playlists .list:hover .item {
  animation-play-state: paused;
}

.spotify-playlists .list .item:hover{
  background-color: #252525;
}


.spotify-playlists .list .item img {
  width: 100%;
  border-radius: 6px;
  margin-bottom: 10px;
}

.spotify-playlists .list .item .play {
  position: relative;
}

.spotify-playlists .list .item .play .fa {
  position: absolute;
  right: 10px;
  top: -60px;
  padding: 18px;
  background-color: #1db954;
  border-radius: 100%;
  opacity: 0;
  transition: all ease 0.4s;
}

.spotify-playlists .list .item:hover .play .fa {
  opacity: 1;
  transform: translateY(-20px);
}

.spotify-playlists .list .item h4 {
  color: #ffffff;
  font-size: 14px;
  margin-bottom: 10px;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.spotify-playlists .list .item p {
  color: #989898;
  font-size: 12px;
  line-height: 20px;
  font-weight: 600;
  text-overflow: ellipsis;
}

/* CSS for projects and experiences sections */
#projects .list,
#experience .list {
  overflow-x: auto; /* Enable horizontal scrolling */
}

#projects .list .item,
#experience .list .item {
  animation: none !important; /* Disable animation */
}

.spotify-playlists hr {
  margin: 70px 0px 0px;
  border-color: #636363;
}

.preview {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(to right, #ae2896, #509bf5);
  padding: 15px 40px;
  display: flex;
  justify-content: space-between;
}

.preview h6 {
  color: #ffffff;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 12px;
  margin-bottom: 10px;
}

.preview p {
  color: #ffffff;
  font-size: 14px;
  font-weight: 500;
}

.preview button {
  background-color: #ffffff;
  color: #000000;
  font-size: 16px;
  font-weight: bold;
  padding: 14px 30px;
  border: 0px;
  border-radius: 40px;
  cursor: pointer;
}

/* Hide the triple-line button when off */
.toggle-container {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 9999; /* Ensure it's above other content */
  cursor: pointer;
  
}

/* Contact-Me stuff */
#contact-me {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
}

#contact-form {
  color: #989898;
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
}

#contact-form label,
#contact-form input,
#contact-form textarea {
  display:inline;
  margin: 0 auto;
  width: 40vw;
}

#contact-form button {
  display: inline;
  margin: 0 auto;
  width: 40%; /* Set width to 80% of viewport width */
  max-width: 100px; /* Limiting maximum width to avoid stretching on larger screens */
  height: 50px; /* Set height to 50 pixels */
  font-size: 1.2em; /* Increase font size */
}

#contact-form textarea {
  height: 20vw; /* Set height to 40% of viewport width */
}

/* CSS for small screen */
@media screen and (max-width: 768px) {
  .toggle-container {
    display: block;
  }

  .toggle-container .toggle .icon-bar {
    display: flex;
    width: 30px;
    height: 2px;
    background-color: #fff;
    margin: 7.5px 2.5px;

  }
  
  .topbar .navbar ul {
    display: contents;
  }

  .main-container {
    margin-left: 0;
  }

  .sidebar {
    width: 0vw;
    overflow: hidden;
    transition: all 0.3s;
    position:absolute;
    background-color: #000000;
    padding: 0px;
    z-index: 100;
  }

  .sidebar.open {
    position: fixed;
    height: 100vh;
    width: 100vw;
    padding: 30px;
  }

  .sidebar .navigation ul li a .fa {
    margin-right: 0;
  }

  .spotify-playlists {
    padding: 20px;
  }
}

